--- a/EmergencyRecorder/recorder.app/src/main/res/layout/activity_home.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/activity_home.xml
@@ -247,6 +247,7 @@
                         android:layout_below="@id/btn_rules"
                         android:text="@string/text_please_wait"
                         android:layout_marginBottom="5dp"
+                        android:visibility="gone"
                         />
 
                     <androidx.recyclerview.widget.RecyclerView
