--- a/EmergencyRecorder/recorder.app/src/main/res/layout/activity_home.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/activity_home.xml
@@ -132,7 +132,8 @@
 
                 <androidx.core.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:requiresFadingEdge="vertical">
 
                     <WebView
                         android:id="@+id/web_howto"
@@ -186,6 +187,7 @@
                         android:layout_below="@id/text_history_summary"
                         android:layout_alignParentBottom="true"
                         tools:listitem="@layout/entry_log_home"
+                        android:requiresFadingEdge="vertical"
                         />
 
                 </RelativeLayout>
@@ -209,6 +211,7 @@
                     android:id="@+id/recycler_twitter"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:requiresFadingEdge="vertical"
                     />
 
             </androidx.cardview.widget.CardView>
@@ -257,6 +260,7 @@
                         android:layout_below="@id/text_rules"
                         android:layout_alignParentBottom="true"
                         tools:listitem="@layout/entry_log_home"
+                        android:requiresFadingEdge="vertical"
                         />
 
                 </RelativeLayout>
