--- a/EmergencyRecorder/recorder.app/src/main/res/layout/entry_log_home.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/entry_log_home.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_image_black_24dp"
         />
 
