--- a/EmergencyRecorder/recorder.app/src/main/res/layout/overlay_bubble_cam.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/overlay_bubble_cam.xml
@@ -58,6 +58,7 @@
                 android:layout_alignStart="@id/camera_view"
                 android:layout_alignEnd="@id/camera_view"
                 android:layout_alignBottom="@id/camera_view"
+                android:layout_marginBottom="@dimen/activity_margin"
                 android:orientation="horizontal">
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
