--- a/EmergencyRecorder/recorder.app/src/main/res/layout/slide_overlay.xml
+++ b/EmergencyRecorder/recorder.app/src/main/res/layout/slide_overlay.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,46 +9,72 @@
     android:padding="@dimen/activity_margin"
     android:background="@color/colorPrimaryDark">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/icon_warn_overlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="64dp"
+        android:src="@drawable/ic_warning_black_24dp"
+        android:tint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.35"
+        app:layout_constraintWidth_percent=".2"
+        app:layout_constraintDimensionRatio="1:1"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/icon_overlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/ic_apps_black_24dp"
+        android:tint="@color/colorPrimary"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.65"
+        app:layout_constraintTop_toTopOf="@id/icon_warn_overlay"
+        app:layout_constraintWidth_percent=".2"
+        tools:ignore="ContentDescription" />
+
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardUseCompatPadding="true">
-        <RelativeLayout
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/icon_warn_overlay"
+        app:layout_constraintWidth_percent=".8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/text_overlay_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/card_padding">
+            android:gravity="center_horizontal"
+            android:text="@string/heading_overlay"
+            android:textSize="24sp"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:textColor="@android:color/white"
+            />
 
-            <ImageView
-                android:id="@+id/icon_warn_overlay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:src="@drawable/ic_warning_black_24dp"
-                android:layout_margin="@dimen/card_padding"
-                />
+        <TextView
+            android:id="@+id/text_description_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/explanation_overlay"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:textColor="@android:color/white"
+            />
 
-            <TextView
-                android:id="@+id/explanation_overlay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@id/icon_warn_overlay"
-                android:layout_marginTop="@dimen/card_padding"
-                android:text="@string/explanation_overlay"
-                />
+        <Button
+            android:id="@+id/btn_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_grant_overlay"
+            />
 
-            <Button
-                android:id="@+id/btn_overlay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/explanation_overlay"
-                android:layout_toEndOf="@id/icon_warn_overlay"
-                android:layout_marginTop="@dimen/card_padding"
-                android:text="@string/btn_grant_overlay"
-                />
+    </LinearLayout>
 
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
